Bug#46339 - crash on REPAIR TABLE merge table USE_FRM

REPAIR TABLE ... USE_FRM crashed debug servers.

A wrong assert assumed that this operation would not be executed
for MERGE tables.

Removed the assert.